--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+/* Home page */
+
+.homeContainer {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 2fr 1fr;
+  grid-template-columns: auto auto auto;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.jumbotron {
+  background-image: url(./assets/images/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  background-color: #7BC0C3;
+  background-blend-mode: darken;
+  grid-column: 1 / span 3;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#aboutlink {
+  background-image: url('./assets/images/road.jpg');
+  background-size: cover;
+  background-color: #003759;
+  background-blend-mode: soft-light;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#worklink {
+  background-color: #782500;
+  background-image: url('./assets/images/arches.jpg');
+  background-size: cover;
+  background-blend-mode: soft-light;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#contactlink {
+  background-image: url('./assets/images/nyc.jpg');
+  background-color: #ff715b;
+  background-blend-mode: soft-light;
 }
