--- a/src/App.css
+++ b/src/App.css
@@ -19,27 +19,59 @@
   background-position: top;
   background-color: #7BC0C3;
   background-blend-mode: darken;
+  display: flex;
+  align-items: center;
   grid-column: 1 / span 3;
+}
 
+.hero-banner {
+  font-size: 50px;
+  margin-left: 10px;
+  margin-right: 50%;
+  background-color: #F1DBC8;
+  
+}
+
+.link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.link-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #aboutlink {
+  position: relative;
   background-image: url('./assets/images/road.jpg');
   background-size: cover;
   background-color: #003759;
   background-blend-mode: soft-light;
- 
 }
 
 #worklink {
-  background-color: #782500;
+  position: relative;
+  background-color: #F1DBC8;
   background-image: url('./assets/images/arches.jpg');
   background-size: cover;
   background-blend-mode: soft-light;
 }
 
 #contactlink {
+  position: relative;
   background-image: url('./assets/images/nyc.jpg');
   background-color: #ff715b;
   background-blend-mode: soft-light;
+}
+
+
+
+.link-title {
+  font-size: 30px;
 }
