began working on projects page

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   padding: 0;
   margin: 0;
 }
+
+a {
+  color: inherit;
+}
+
 /* Home page */
 
 .homeContainer {
@@ -70,8 +75,67 @@
   background-blend-mode: soft-light;
 }
 
-
-
 .link-title {
   font-size: 30px;
 }
+
+/* Nav */
+
+.tab-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+.tab {
+  list-style: none;
+}
+
+/* Project Gallery */
+
+.project-grid-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
+  height: 400px;
+  grid-gap: 10px;
+}
+
+
+.project-img {
+  width: 100%;
+  object-fit: fill;
+  height: 75%;
+  border-bottom: solid 1px;
+  border-color: #003759
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: #F1DBC8;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-container {
+  padding: 2px 16px;
+}
+
+
