--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 * {
   box-sizing: border-box;
+  font-family: 'Prompt', sans-serif;
   padding: 0;
   margin: 0;
   color: #003759
 }
 
+body {
+  position: relative;
+}
+
+#root, .App, body {
+  min-height: 100vh;
+}
 
 a {
   color: inherit;
@@ -19,13 +27,15 @@ h2 {
   border-bottom: solid #003759;
 }
 
-.page-body {
-  min-height: 100vh;
+.page-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 /* Home page */
 
-.homeContainer {
+.home-container {
   display: grid;
   height: 100vh;
   grid-template-rows: 2fr 1fr;
@@ -49,6 +59,7 @@ h2 {
   margin-left: 10px;
   margin-right: 50%;
   background-color: #F1DBC8;
+  opacity: 90%;
   
 }
 
@@ -95,7 +106,9 @@ h2 {
 }
 
 .link-title {
-  font-size: 30px;
+  font-size: 2rem;
+  margin: 5px auto;
+  text-align: center;
 }
 
 /* Header & Nav */
@@ -110,7 +123,7 @@ header {
 }
 
 header h1 {
-  font-size: 2.5em;
+  font-size: 2em;
 }
 
 .tab-list {
@@ -119,8 +132,6 @@ header h1 {
   align-items: center;
   justify-content: space-evenly;
   min-width: 400px;
-  
-  
 }
 
 a {
@@ -132,6 +143,10 @@ a {
 }
 
 /* Project Gallery */
+
+.page-body {
+  display: block;
+}
 
 .project-grid-container {
   display: flex;
@@ -199,7 +214,61 @@ a {
   width: 60%;
 }
 
+/* Resume */
 
+
+.resume-body {
+  width: 80%;
+  margin: 20px auto 125px;
+}
+
+.resume-body li {
+  list-style: none;
+}
+
+/* Footer */
+
+footer {
+  background-color: #7BC0C3;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.resume-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 125px;
+}
+
+
+h3 {
+  font-size: 1.5rem;
+  min-width: 30%;
+  margin: 10px;
+  text-align: center;
+  
+}
+
+.contact-list {
+  display: flex;
+  width: 270px;
+  margin: 10px auto;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.contact-link {
+  margin: 30px;
+}
+
+.contact-icon {
+  width: 50px;
+  margin: 0 10px;
+}
 
 /* Media Queries */
 
@@ -211,6 +280,15 @@ a {
 }
 
 @media screen and (max-width:640px) {
+
+  .hero-banner {
+    font-size: 30px;
+  }
+
+  .link-title {
+    font-size: 1.25rem;
+    ;
+  }
   
   .projects-container {
     grid-template-columns: 1fr;
