--- a/src/App.css
+++ b/src/App.css
@@ -202,7 +202,8 @@ a {
 .self-portrait {
   margin: 10px;
   width: 25%;
-  min-width: 250px;
+  min-width: 250px; 
+  min-height: 250px;
   border: solid black 1px;
 }
 
