--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,8 @@ a {
 
 .tab {
   list-style: none;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 /* Project Gallery */
@@ -170,8 +172,6 @@ a {
 }
 
 
-
-
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -188,12 +188,13 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 20px;
 }
 
 .project-link {
-  padding-left: 5px;
-  padding-right: 5px;
+  height: 45px;
+  width: 45px;
+  
 }
 
 .hvr-radial-out {
@@ -236,10 +237,9 @@ a {
   transform: scale(2);
 }
 
-
 .project-link img {
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   padding: 2px;
 
 }
@@ -322,10 +322,26 @@ h3 {
 
 /* Media Queries */
 
-@media screen and (max-width:980px) {
+@media screen and (max-width:1024px) {
   .projects-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template: repeat(3, 1fr)
+  }
+}
+
+@media screen and (max-width:768px) {
+  .card-links {
+    margin-top: 5px;
+  }
+
+  .project-link {
+    height: 30px;
+    width: 30px;
+  }
+
+  .project-link img {
+    height: 30px;
+    width: 30px;
   }
 }
 
